# bjsys

./: Cargo.toml  README.md  build.rs
client/: Cargo.toml  build.rs
client/examples/: basic.rs  workers.rs
client/src/: error.rs  lib.rs  queue.rs  task.rs  taskstub.rs  worker.rs
client/src/stub/: mod.rs  service.rs
client/tests/: queues.rs
common/: Cargo.toml
common/defs/: service.proto
common/src/: errors.rs  lib.rs  request.rs  validators.rs
common/src/service/: errors.rs  mod.rs  msgs.rs  validators.rs
common/src/stub/: mod.rs  raft.rs
embed/: Cargo.toml
embed/src/: environment.rs  extension.rs  hash.rs  lib.rs  list.rs  manager.rs  queue.rs  queuel.rs  sorted_set.rs  sorted_setl.rs  store.rs  test_utils.rs  transaction.rs  tree_ext.rs  txn_ext.rs
proto/: Cargo.toml  build.rs  error_details.proto  messages.proto  raft.proto  service.proto  tasks.proto
proto/defs/: messages.proto  raft.proto  tasks.proto
proto/src/: errors.rs  lib.rs  messages.rs  request.rs  validators.rs
proto/src/stub/: error_details.rs  mod.rs  msg.rs  raft.rs  service.rs
server/: Cargo.toml  README.md  build.rs
server/src/: ack.rs  app.rs  cluster.rs  config.rs  dispatcher.rs  interceptor.rs  lib.rs  main.rs  manager.rs  repository.rs  scheduler.rs  service.rs  store.rs  store_lmdb.rs  task.rs
server/src/service/: ack.rs  dispatcher.rs  interceptor.rs  mod.rs  repository.rs  scheduler.rs  store.rs
server/src/service/stub/: taskstub.rs
server/src/stub/: mod.rs  raft.rs  service.rs  taskstub.rs
src/: app.rs  main.rs  tracing.rs
src/service/: mod.rs  repository.rs
utils/: Cargo.toml
utils/src/: id.rs
