[package]
name = "client"
version = "0.1.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
tonic = "0.3.1"
serde = { version = "1.0.115", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.57"
xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
futures-util = "0.3.8"
proto = { path = "../proto", features = ["client"]}

[dev-dependencies]
tokio = { version = "0.2.22", features = ["macros", "time", "sync"] }
tracing-subscriber = "0.2.14"
tracing = "0.1.19"
