[package]
name = "client"
version = "0.1.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
tonic = "0.4.0"
serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.61"
xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
futures-util = "0.3.12"
proto = { path = "../proto", features = ["client"]}

[dev-dependencies]
tokio = { version = "1.0.2", features = ["macros", "time", "sync"] }
tracing-subscriber = "0.2.15"
tracing = "0.1.22"
