[package]
name = "common"
version = "0.2.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
prost = "0.7.0"
tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost", "transport"] }
validator = "0.12.0"
serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
build = { path = "../build/" }
