[package]
name = "proto"
version = "0.1.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[features]
# Client generated service
client = []
# Server generated service
server = []

[dependencies]
prost = "0.6.1"
tonic = "0.3.1"
validator = "0.11.0"
serde = { version = "1.0.115", default-features = false, features = ["serde_derive"] }

[build-dependencies]
tonic-build = "0.3.1"
