[package]
name = "proto"
version = "0.1.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[features]
# Client generated service
client = []
# Server generated service
server = []

[dependencies]
prost = "0.7.0"
tonic = "0.4.0"
validator = "0.12.0"
serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }

[build-dependencies]
tonic-build = "0.4.0"
