[package]
name = "proto"
version = "0.2.0"
authors = ["Hector Salazar <hecsalazarf@outlook.com>"]
edition = "2018"

[features]
# Client generated service
client = []
# Server generated service
server = ["async-raft"]

[dependencies]
prost = "0.7.0"
tonic = { version = "0.4.0", default-features = false, features = ["codegen", "prost"] }
validator = "0.12.0"
serde = { version = "1.0.122", default-features = false, features = ["serde_derive"] }
async-raft = { version = "0.6.0", optional = true }

[build-dependencies]
tonic-build = "0.4.0"
