[package]
name = "server"
version = "0.1.0"
description = "A task-dispatcher server"
authors = ["Héctor S. <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
tonic = "0.3.1"
prost = "0.6.1"
tokio = { version = "0.2.22", features = ["macros", "sync", "stream", "time", "rt-threaded", "signal"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
redis = { version = "0.17.0", default-features = false, features = ["tokio-rt-core", "script"] }
xactor = { version = "0.7.8", default-features = false, features = ["runtime-tokio"] }
rand = "0.7.3"
validator = "0.11.0"
clap = { version = "2.33.3", default-features = false }
utils = { path = "../utils" }
proto = { path = "../proto", features = ["server"] }
