[package]
name = "server"
version = "0.1.0"
description = "A task-dispatcher server"
authors = ["Héctor S. <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.0.2", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.2"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
redis = { version = "0.19.0", default-features = false, features = ["tokio-comp", "script"] }
xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
rand = "0.8.2"
clap = { version = "2.33.3", default-features = false }
utils = { path = "../utils" }
proto = { path = "../proto", features = ["server"] }
