[package]
name = "server"
version = "0.2.0"
description = "A task-dispatcher server"
authors = ["Héctor S. <hecsalazarf@outlook.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4.0", default-features = false, features = ["transport"] }
tokio = { version = "1.1.1", features = ["macros", "sync", "time", "rt-multi-thread", "signal"] }
futures-util = "0.3.12"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
rand = "0.8.2"
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "2.33.3", default-features = false }
anyhow = "1.0.38"
proto = { path = "../proto", features = ["server"] }
embed = { path = "../embed" }
